--- a/data/series/list.yaml
+++ b/data/series/list.yaml
@@ -251,7 +251,7 @@
   zh-TW: 外星人
   zh-CN:
 - en: Shark
-  de: Stung
+  de: Hai
   es: Tiburón
   fr: Requin
   it: Squalo
@@ -260,8 +260,8 @@
   ja_romaji: Shāku
   ko: 샤크
   ko_rr: Syakeu
-  zh-TW: 鯊
-  zh-CN:
+  zh-TW:
+  zh-CN: 鲨
 - en: P.U.N.K.
   de: P.U.N.K.
   es: P.U.N.K.
