--- a/data/series/map.yaml
+++ b/data/series/map.yaml
@@ -251,7 +251,7 @@ Alien:
   zh-TW: 外星人
   zh-CN:
 Shark:
-  de: Stung
+  de: Hai
   es: Tiburón
   fr: Requin
   it: Squalo
@@ -260,8 +260,8 @@ Shark:
   ja_romaji: Shāku
   ko: 샤크
   ko_rr: Syakeu
-  zh-TW: 鯊
-  zh-CN:
+  zh-TW:
+  zh-CN: 鲨
 P.U.N.K.:
   de: P.U.N.K.
   es: P.U.N.K.
