--- a/data/cards/39402797.yaml
+++ b/data/cards/39402797.yaml
@@ -15,8 +15,8 @@ name:
   zh-CN: 三戟天龙
 text:
   en: |-
-    1 Dragon-Type Tuner + 1 or more non-Tuner Dragon-Type monsters
-    Must be Synchro Summoned, and cannot be Special Summoned by other ways. When this card is Synchro Summoned: You can target up to 2 other cards you control; destroy those targets, and if you do, for each destroyed card, this card gains 1 additional attack during each Battle Phase this turn.
+    1 Dragon Tuner + 1+ non-Tuner Dragon monsters
+    Must be Synchro Summoned. When this card is Synchro Summoned: You can target up to 2 other cards you control; destroy those targets, and if you do, for each destroyed card, this card gains 1 additional attack during each Battle Phase this turn.
   de: |-
     1 Empfänger-Monster vom Typ Drache + 1 oder mehr Nicht-Empfänger-Monster vom Typ Drache
     Muss als Synchrobeschwörung beschworen werden und kann nicht auf andere Art als Spezialbeschwörung beschworen werden. Wenn diese Karte als Synchrobeschwörung beschworen wird: Du kannst bis zu 2 andere Karten wählen, die du kontrollierst; zerstöre die gewählten Ziele und falls du dies tust, erhält diese Karte während jeder Battle Phase in diesem Spielzug für jede zerstörte Karte 1 zusätzlichen Angriff.
@@ -66,6 +66,9 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Secret Rare
+  - set_number: MP24-EN147
+    set_name: '25th Anniversary Tin: Dueling Mirrors'
+    rarities:
   de:
   - set_number: RGBT-DE043
     set_name: Raging Battle
