--- a/data/cards/95440946.yaml
+++ b/data/cards/95440946.yaml
@@ -80,6 +80,10 @@ sets:
     set_name: 2-Player Starter Set
     rarities:
     - Common
+  - set_number: LART-EN066
+    set_name: The Lost Art Promotion 2024 A
+    rarities:
+    - Ultra Rare
   de:
   - set_number: SESL-DE027
     set_name: Secret Slayers
@@ -107,6 +111,10 @@ sets:
     set_name: 2-Player Starter Set
     rarities:
     - Common
+  - set_number: LART-DE066
+    set_name: The Lost Art Promotion 2024 A
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: SESL-FR027
     set_name: Secret Slayers
@@ -134,6 +142,10 @@ sets:
     set_name: 2-Player Starter Set
     rarities:
     - Common
+  - set_number: LART-FR066
+    set_name: The Lost Art Promotion 2024 A
+    rarities:
+    - Ultra Rare
   it:
   - set_number: SESL-IT027
     set_name: Secret Slayers
@@ -161,6 +173,10 @@ sets:
     set_name: 2-Player Starter Set
     rarities:
     - Common
+  - set_number: LART-IT066
+    set_name: The Lost Art Promotion 2024 A
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: SESL-PT027
     set_name: Secret Slayers
@@ -188,6 +204,10 @@ sets:
     set_name: 2-Player Starter Set
     rarities:
     - Common
+  - set_number: LART-PT066
+    set_name: The Lost Art Promotion 2024 A
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBSS-JP027
     set_name: 'Deck Build Pack: Secret Slayers'
