--- a/data/series/map.yaml
+++ b/data/series/map.yaml
@@ -6274,6 +6274,18 @@ Welcome Labrynth:
   ko_rr:
   zh-TW:
   zh-CN: 光临拉比丽斯
+Shark Drake:
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: シャーク・ドレイク
+  ja_romaji: Shāku Doreiku
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
 Stellarknight:
   de: Wandelsternritter
   es: Estelcaballero
