--- a/data/rush/20151.yaml
+++ b/data/rush/20151.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Change up to 2 face-up Effect Monsters on the field to face-down Defense Position. Then, if you changed a monster with 2600 or more original ATK on your opponent's field to face-down Defense Position by this effect, gain 1500 LP.
+    Change up to 2 face-up Effect Monsters on the field to face-down Defense Position. Then, if you changed a monster on your opponent's field with 2600 or more original ATK to face-down Defense Position by this effect, gain 1500 LP.
   de:
   es:
   fr:
