--- a/data/rush/yugipedia1056956.yaml
+++ b/data/rush/yugipedia1056956.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    TBA
+    During your Main Phase that you Normal Summoned or Special Summoned this card, send the top card of your Deck to the Graveyard.
   de:
   es:
   fr:
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    TBA
+    Choose 1 face-up monster on your opponent's field with 100 or more original ATK. While this card is face-up, it gains ATK equal to [that monster's original ATK], and if that monster's original DEF is 100 or more, this card gains DEF equal to [that monster's original DEF].
   de:
   es:
   fr:
