--- a/data/series/map.yaml
+++ b/data/series/map.yaml
@@ -6275,17 +6275,17 @@ Welcome Labrynth:
   zh-TW:
   zh-CN: 光临拉比丽斯
 Shark Drake:
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Haidrache
+  es: Draco Tiburón
+  fr: Requin Drakonien
+  it: Draghetto Squalo
+  pt: Dragonete Tubarão
   ja: シャーク・ドレイク
   ja_romaji: Shāku Doreiku
-  ko:
-  ko_rr:
+  ko: 샤크 드레이크
+  ko_rr: Syakeu Deureikeu
   zh-TW:
-  zh-CN:
+  zh-CN: 鲨龙兽
 Stellarknight:
   de: Wandelsternritter
   es: Estelcaballero
