--- a/data/rush/20011.yaml
+++ b/data/rush/20011.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Roll a six-sided die. Inflict damage to your opponent equal to [the result] x 100, and all face-up monsters on your opponent's field lose ATK/DEF equal to [the result] x 100 until the end of this turn. Then, you can make all face-up monsters on your field gain ATK/DEF equal to [the result] x 100 until the end of this turn.
+    Roll a six-sided die. Inflict damage to your opponent equal to [the result] x 100, and all face-up monsters on their field lose ATK/DEF equal to [the result] x 100 until the end of this turn. Then, you can make all face-up monsters on your field gain ATK/DEF equal to [the result] x 100 until the end of this turn.
   de:
   es:
   fr:
