--- a/data/series/list.yaml
+++ b/data/series/list.yaml
@@ -6299,17 +6299,17 @@
   zh-TW:
   zh-CN: 光临拉比丽斯
 - en: Shark Drake
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Haidrache
+  es: Draco Tiburón
+  fr: Requin Drakonien
+  it: Draghetto Squalo
+  pt: Dragonete Tubarão
   ja: シャーク・ドレイク
   ja_romaji: Shāku Doreiku
-  ko:
-  ko_rr:
+  ko: 샤크 드레이크
+  ko_rr: Syakeu Deureikeu
   zh-TW:
-  zh-CN:
+  zh-CN: 鲨龙兽
 - en: Stellarknight
   de: Wandelsternritter
   es: Estelcaballero
