--- a/rush.yaml
+++ b/rush.yaml
@@ -99966,7 +99966,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Shuffle 3 monsters from the Graveyards into the owner's Decks. Then, if this card is in Maximum Mode, you can shuffle this card into the owner's Deck. If you do, draw 3 cards.
+    Shuffle 3 monsters from the Graveyards into the owner's Decks. Then, if this card is in Maximum Mode, you can shuffle it into the owner's Deck. If you do, draw 3 cards.
   de:
   es:
   fr:
@@ -100601,7 +100601,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Change the battle position of 1 monster on your opponent's field. Then, if this card is in Maximum Mode, this card inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference) if it attacks a Defense Position monster this turn.
+    Change the battle position of 1 monster on your opponent's field. Then, if this card is in Maximum Mode, it inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference) if it attacks a Defense Position monster this turn.
   de:
   es:
   fr:
@@ -135400,7 +135400,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Roll a six-sided die. Inflict damage to your opponent equal to [the result] x 100, and all face-up monsters on your opponent's field lose ATK/DEF equal to [the result] x 100 until the end of this turn. Then, you can make all face-up monsters on your field gain ATK/DEF equal to [the result] x 100 until the end of this turn.
+    Roll a six-sided die. Inflict damage to your opponent equal to [the result] x 100, and all face-up monsters on their field lose ATK/DEF equal to [the result] x 100 until the end of this turn. Then, you can make all face-up monsters on your field gain ATK/DEF equal to [the result] x 100 until the end of this turn.
   de:
   es:
   fr:
@@ -138182,7 +138182,7 @@ name:
   zh-CN:
 summoning_condition:
   en: |-
-    If you have a face-up monster with 0 original ATK on your field, you can Normal Summon this card without Tributing.
+    If you have a face-up monster on your field with 0 original ATK, you can Normal Summon this card without Tributing.
   de:
   es:
   fr:
@@ -138210,7 +138210,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card gains ATK equal to [the number of face-up monsters with 0 original ATK on your field] x 1000. You take no battle damage from battles involving your monsters with 0 ATK.
+    This card gains ATK equal to [the number of face-up monsters on your field with 0 original ATK] x 1000. You take no battle damage from battles involving your monsters with 0 ATK.
   de:
   es:
   fr:
@@ -140242,7 +140242,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Change up to 2 face-up Effect Monsters on the field to face-down Defense Position. Then, if you changed a monster with 2600 or more original ATK on your opponent's field to face-down Defense Position by this effect, gain 1500 LP.
+    Change up to 2 face-up Effect Monsters on the field to face-down Defense Position. Then, if you changed a monster on your opponent's field with 2600 or more original ATK to face-down Defense Position by this effect, gain 1500 LP.
   de:
   es:
   fr:
@@ -144877,7 +144877,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    TBA
+    During your Main Phase that you Normal Summoned or Special Summoned this card, send the top card of your Deck to the Graveyard.
   de:
   es:
   fr:
@@ -144889,7 +144889,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    TBA
+    Choose 1 face-up monster on your opponent's field with 100 or more original ATK. While this card is face-up, it gains ATK equal to [that monster's original ATK], and if that monster's original DEF is 100 or more, this card gains DEF equal to [that monster's original DEF].
   de:
   es:
   fr:
