--- a/data/cards/yugipedia1058511.yaml
+++ b/data/cards/yugipedia1058511.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If this card is added to your hand, except by drawing it: You can Special Summon it. If this card is used for the Xyz Summon of a WATER monster that uses 3 or more materials, it can be treated as 2 materials. You can only use each of the previous effects of "Drake Shark" once per turn. A "Shark Drake" Xyz Monster that has this card as material gains this effect.
+    If this card is added to your hand, except by drawing it: You can Special Summon it. This card can be treated as 2 materials for the Xyz Summon of a WATER monster that uses 3 or more materials. You can only use each of the previous effects of "Drake Shark" once per turn. A "Shark Drake" Xyz Monster that has this card as material gains this effect.
     ● Once per turn: You can detach 2 materials from this card, then target 1 Spell/Trap on the field; attach it to this card as material.
   de:
   es:
@@ -23,7 +23,7 @@ text:
   it:
   pt:
   ja: |-
-    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードがドロー以外の方法で手札に加わった場合に発動できる。このカードを特殊召喚する。②：このカードをモンスター３体以上を素材とする水属性ＸモンスターのＸ召喚に使用する場合、２体分のＸ素材にできる。③：このカードを素材として持っている「シャーク・ドレイク」Ｘモンスターは以下の効果を得る。●１ターンに１度、このカードのＸ素材を２つ取り除き、フィールドの魔法・罠カード１枚を対象として発動できる。そのカードをこのカードのＸ素材とする。
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードがドロー以外の方法で手札に加わった場合に発動できる。このカードを特殊召喚する。②：モンスター３体以上を素材とする水属性ＸモンスターをＸ召喚する場合、このカードは２体分のＸ素材にできる。③：このカードを素材として持っている「シャーク・ドレイク」Ｘモンスターは以下の効果を得る。●１ターンに１度、このカードのＸ素材を２つ取り除き、フィールドの魔法・罠カード１枚を対象として発動できる。そのカードをこのカードのＸ素材とする。
   ko:
   zh-TW:
   zh-CN:
