--- a/data/cards/yugipedia1058513.yaml
+++ b/data/cards/yugipedia1058513.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     4 Level 5 monsters
-    You can also Xyz Summon this card by discarding 1 Spell and using 1 Rank 4 "Shark Drake" Xyz Monster you control. (Transfer its materials to this card.) Once per turn (Quick Effect): You can detach 1 material from this card, then target 1 Effect Monster your opponent controls; negate its effects, and if you do, change its ATK/DEF to 0. This card can make a second attack during each Battle Phase. If this card attacks a Defense Position monster, inflict piercing battle damage to your opponent.
+    You can also Xyz Summon this card by discarding 1 Spell and using 1 Rank 4 "Shark Drake" Xyz Monster you control. (Transfer its materials to this card.) Once per turn (Quick Effect): You can detach 1 material from this card, then target 1 Effect Monster your opponent controls; negate its effects, and if you do, change its ATK/DEF to 0. This card can make a second attack during each Battle Phase, also if it attacks a Defense Position monster, inflict piercing battle damage to your opponent.
   de:
   es:
   fr:
@@ -24,7 +24,7 @@ text:
   pt:
   ja: |-
     レベル５モンスター×４
-    このカードは手札の魔法カード１枚を捨て、自分フィールドのランク４の「シャーク・ドレイク」Ｘモンスターの上に重ねてＸ召喚する事もできる。①：自分・相手ターンに１度、このカードのＸ素材を１つ取り除き、相手フィールドの効果モンスター１体を対象として発動できる。そのモンスターの効果を無効にし、その攻撃力・守備力は０になる。②：このカードは１度のバトルフェイズ中に２回攻撃できる。③：このカードが守備表示モンスターを攻撃した場合、その守備力を攻撃力が超えた分だけ相手に戦闘ダメージを与える。
+    このカードは手札の魔法カード１枚を捨て、自分フィールドのランク４の「シャーク・ドレイク」Ｘモンスターの上に重ねてＸ召喚する事もできる。①：自分・相手ターンに１度、このカードのＸ素材を１つ取り除き、相手フィールドの効果モンスター１体を対象として発動できる。そのモンスターの効果を無効にし、その攻撃力・守備力は０になる。②：このカードは１度のバトルフェイズ中に２回攻撃でき、守備表示モンスターを攻撃した場合、その守備力を攻撃力が超えた分だけ相手に戦闘ダメージを与える。
   ko:
   zh-TW:
   zh-CN:
