--- a/data/cards/yugipedia1058518.yaml
+++ b/data/cards/yugipedia1058518.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     2 Level 3 monsters
     If this card is Special Summoned: You can add 1 "Virtue Stream" from your Deck to your hand. You can activate 1 of these effects;
-    ● Detach 1 Xyz Material from a monster you control; add 1 Fish, Sea Serpent, or Aqua monster from your GY to your hand, except "Levirtue Dragon".
+    ● Detach 1 Xyz Material from a monster you control, then add 1 Fish, Sea Serpent, or Aqua monster from your GY to your hand, except "Levirtue Dragon".
     ● Target 2 Xyz Monsters on the field; detach 1 material from 1 of them and attach it to the other as material.
     You can only use each effect of "Levirtue Dragon" once per turn.
   de:
@@ -27,7 +27,7 @@ text:
   pt:
   ja: |-
     レベル３モンスター×２
-    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが特殊召喚した場合に発動できる。デッキから「ヴァーチュ・ストリーム」１枚を手札に加える。②：以下の効果から１つを選択して発動できる。●自分フィールドのＸ素材を１つ取り除いて発動できる。「リヴァーチュ・ドラゴン」以外の自分の墓地の魚族・海竜族・水族モンスター１体を手札に加える。●フィールドのＸモンスター２体を対象として発動できる。その内の１体のＸ素材１つを、もう１体のＸ素材とする。
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが特殊召喚した場合に発動できる。デッキから「ヴァーチュ・ストリーム」１枚を手札に加える。②：以下の効果から１つを選択して発動できる。●自分フィールドのＸ素材を１つ取り除く。その後、自分の墓地から「リヴァーチュ・ドラゴン」以外の魚族・海竜族・水族モンスター１体を手札に加える。●フィールドのＸモンスター２体を対象として発動できる。その内の１体のＸ素材１つを、もう１体のＸ素材とする。
   ko:
   zh-TW:
   zh-CN:
