--- a/data/cards/yugipedia1058530.yaml
+++ b/data/cards/yugipedia1058530.yaml
@@ -19,14 +19,14 @@ text:
     An Xyz Monster equipped with this card gains these effects.
     ● Cannot be destroyed by battle.
     ● Once per turn, if this card battled this turn (Quick Effect): You can return 1 Equip Card equipped to this card to the hand, then, immediately after this effect resolves, Xyz Summon 1 WATER Xyz Monster.
-    If this card is sent to the GY: You can activate this effect; equip this card from your GY to an Xyz Monster you control during the End Phase of this turn. You can only activate 1 "Reincarnate Unveil Mail" per turn.
+    Once per turn, during the End Phase, if this card is in the GY because it was sent there this turn: You can equip this card to 1 Xyz Monster you control. You can only activate 1 "Reincarnate Unveil Mail" per turn.
   de:
   es:
   fr:
   it:
   pt:
   ja: |-
-    このカード名はルール上「アーマード・エクシーズ」カードとしても扱う。このカード名のカードは１ターンに１枚しか発動できない。①：このカードを装備したＸモンスターは以下の効果を得る。●このカードは戦闘では破壊されない。●このカードが戦闘を行った自分・相手ターンに１度、発動できる。このカードの装備カード１枚を手札に戻す。その後、水属性Ｘモンスター１体のＸ召喚を行う。②：このカードが墓地へ送られた場合に発動できる。このターンのエンドフェイズに、墓地のこのカードを自分フィールドのＸモンスターに装備する。
+    このカード名はルール上「アーマード・エクシーズ」カードとしても扱う。このカード名のカードは１ターンに１枚しか発動できない。①：このカードを装備したＸモンスターは以下の効果を得る。●このカードは戦闘では破壊されない。●このカードが戦闘を行った自分・相手ターンに１度、発動できる。このカードの装備カード１枚を手札に戻す。その後、水属性Ｘモンスター１体のＸ召喚を行う。②：このカードが墓地へ送られたターンのエンドフェイズに発動できる。このカードを自分フィールドのＸモンスター１体に装備する。
   ko:
   zh-TW:
   zh-CN:
