--- a/data/cards/yugipedia1058548.yaml
+++ b/data/cards/yugipedia1058548.yaml
@@ -22,7 +22,7 @@ text:
   it:
   pt:
   ja: |-
-    このカード名の①②の効果は１ターンに１度、いずれか１つしか使用できない。①：ＸモンスターをＸ素材としているＸモンスターが自分フィールドに存在する場合、フィールドのモンスターの属性を１つ宣言して発動できる。装備魔法カードを装備したモンスターを除く、フィールドの宣言した属性のモンスターを全て破壊する。②：墓地のこのカードを除外し、自分フィールドのＸ素材を１つ取り除いて発動できる。自分の墓地から魚族・海竜族・水族モンスター１体を自分か相手のフィールドに特殊召喚する。
+    このカード名の①②の効果は１ターンに１度、いずれか１つしか使用できない。①：ＸモンスターをＸ素材としているＸモンスターが自分フィールドに存在する場合、フィールドのモンスターの属性を１つ宣言して発動できる。装備魔法カードを装備しているモンスターを除く、フィールドの宣言した属性のモンスターを全て破壊する。②：墓地のこのカードを除外し、自分フィールドのＸ素材を１つ取り除いて発動できる。自分の墓地から魚族・海竜族・水族モンスター１体を自分か相手のフィールドに特殊召喚する。
   ko:
   zh-TW:
   zh-CN:
