--- a/data/cards/yugipedia1058538.yaml
+++ b/data/cards/yugipedia1058538.yaml
@@ -15,8 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Target 1 Fish, Sea Serpent, or Aqua monster you control and 2 cards your opponent controls; destroy them. You can banish this card from your GY, then target 1 face-up monster on the field; if it is a WATER monster, the next time it would be destroyed by card effect this turn, it is not destroyed. If it is a non-WATER monster, it becomes WATER.
-    You can only use each effect of "Virtue Stream" once per turn.
+    Target 1 Fish, Sea Serpent, or Aqua monster you control and 2 cards your opponent controls; destroy them. You can banish this card from your GY, then target 1 face-up monster on the field; if it is a WATER monster, the next time it would be destroyed by card effect this turn, it is not destroyed. Otherwise, its Attribute becomes WATER. You can only use each effect of "Virtue Stream" once per turn.
   de:
   es:
   fr:
