--- a/data/cards/02370081.yaml
+++ b/data/cards/02370081.yaml
@@ -16,6 +16,8 @@ name:
 text:
   en: |-
     A WATER monster equipped with this card increases its ATK by 400 points and decreases its DEF by 200 points.
+
+    Equip only to a WATER monster. It gains 400 ATK and loses 200 DEF.
   de: |-
     Ein WASSER Monster, das mit dieser Karte ausgerüstet wird, erhöht seine ATK um 400 Punkte und verringert seine DEF um 200 Punkte.
   es: |-
