--- a/data/cards/56260110.yaml
+++ b/data/cards/56260110.yaml
@@ -16,6 +16,8 @@ name:
 text:
   en: |-
     Decrease your opponent's Life Points by 300 points.
+
+    Inflict 300 damage to your opponent.
   de: |-
     Fügt den Life Points deines Gegners 300 Punkte Schaden zu.
   es: |-
