--- a/data/cards/yugipedia1058513.yaml
+++ b/data/cards/yugipedia1058513.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     4 Level 5 monsters
-    You can also Xyz Summon this card by discarding 1 Spell and using 1 Rank 4 "Shark Drake" Xyz Monster you control. (Transfer its materials to this card.) Once per turn (Quick Effect): You can detach 1 material from this card, then target 1 Effect Monster your opponent controls; negate its effects, and if you do, change its ATK/DEF to 0. This card can make a second attack during each Battle Phase, also if it attacks a Defense Position monster, inflict piercing battle damage to your opponent.
+    You can also Xyz Summon this card by discarding 1 Spell and using 1 Rank 4 "Shark Drake" Xyz Monster you control. (Transfer its materials to this card.) Once per turn (Quick Effect): You can detach 1 material from this card, then target 1 Effect Monster your opponent controls; negate its effects, and if you do, change its ATK/DEF to 0. This card can make a second attack during each Battle Phase, also if it attacks a Defense Position monster, inflict piercing battle damage.
   de:
   es:
   fr:
