--- a/data/cards/yugipedia1058530.yaml
+++ b/data/cards/yugipedia1058530.yaml
@@ -19,7 +19,7 @@ text:
     An Xyz Monster equipped with this card gains these effects.
     ● Cannot be destroyed by battle.
     ● Once per turn, if this card battled this turn (Quick Effect): You can return 1 Equip Card equipped to this card to the hand, then, immediately after this effect resolves, Xyz Summon 1 WATER Xyz Monster.
-    Once per turn, during the End Phase, if this card is in the GY because it was sent there this turn: You can equip this card to 1 Xyz Monster you control. You can only activate 1 "Reincarnate Unveil Mail" per turn.
+    Once per turn, during the End Phase, if this card is in your GY because it was sent there this turn: You can equip it to an Xyz Monster you control. You can only activate 1 "Reincarnate Unveil Mail" per turn.
   de:
   es:
   fr:
