--- a/rush.yaml
+++ b/rush.yaml
@@ -71107,7 +71107,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Look at your opponent's hand. You can choose up to 3 Spell/Trap Cards from their hand. If you do, your opponent Sets those cards to their field, and they take damage equal to [the number of cards Set by this effect] x 300.
+    Look at your opponent's hand. You can choose up to 3 Spell/Trap Cards from it. If you do, your opponent Sets those cards to their field, and they take damage equal to [the number of cards Set by this effect] x 300.
   de:
   es:
   fr:
@@ -100365,7 +100365,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    If you have no monsters in your Graveyard, your opponent cannot Set monsters from their hand, then if this card is in Maximum Mode and your opponent has a face-down Spell/Trap Card on their field, your opponent cannot Set Spell/Trap Cards from their hand.
+    If you have no monsters in your Graveyard, your opponent cannot Set monsters from their hand, then if this card is in Maximum Mode and your opponent has a face-down Spell/Trap Card on their field, they cannot Set Spell/Trap Cards from their hand.
   de:
   es:
   fr:
@@ -108789,7 +108789,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, this card cannot be destroyed by your opponent's Trap Card effects, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). Then, if you activated this effect during your Main Phase that you Special Summoned this card, it gains ATK equal to [the number of monsters sent to the Graveyard to meet the requirement] x 1000 until the end of this turn.
+    This turn, this card cannot be destroyed by your opponent's Trap Card effects, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). Then, if you activated this effect during your Main Phase that you Special Summoned this card, this card gains ATK equal to [the number of monsters sent to the Graveyard to meet the requirement] x 1000 until the end of this turn.
   de:
   es:
   fr:
