--- a/data/rush/20134.yaml
+++ b/data/rush/20134.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Return all face-up monsters on the field with the highest original ATK to the owner's hand.
+    Return all monsters with the highest original ATK among the face-up monsters on the field to the owner's hand.
   de:
   es:
   fr:
