--- a/data/rush/20135.yaml
+++ b/data/rush/20135.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, this card gains 1000 ATK, but cannot attack directly. Then, if you shuffled "Transamu Ephyrai" to meet the requirement, this card gains 2600 ATK this turn.
+    This turn, this card gains 1000 ATK, but it cannot attack directly. Then, if you shuffled "Transamu Ephyrai" to meet the requirement, this card gains 2600 ATK this turn.
   de:
   es:
   fr:
