--- a/rush.yaml
+++ b/rush.yaml
@@ -90784,7 +90784,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy all face-up monsters on the field with the highest Level.
+    Destroy all monsters with the highest Level among the face-up monsters on the field.
   de:
   es:
   fr:
@@ -139105,7 +139105,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Return all face-up monsters on the field with the highest original ATK to the owner's hand.
+    Return all monsters with the highest original ATK among the face-up monsters on the field to the owner's hand.
   de:
   es:
   fr:
@@ -139166,7 +139166,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, this card gains 1000 ATK, but cannot attack directly. Then, if you shuffled "Transamu Ephyrai" to meet the requirement, this card gains 2600 ATK this turn.
+    This turn, this card gains 1000 ATK, but it cannot attack directly. Then, if you shuffled "Transamu Ephyrai" to meet the requirement, this card gains 2600 ATK this turn.
   de:
   es:
   fr:
