--- a/data/cards/24508238.yaml
+++ b/data/cards/24508238.yaml
@@ -109,7 +109,7 @@ sets:
     set_name: 2-Player Starter Set
     rarities:
     - Common
-  - set_number: RA02-EN???
+  - set_number: RA02-EN002
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
@@ -186,7 +186,7 @@ sets:
     set_name: 2-Player Starter Set
     rarities:
     - Common
-  - set_number: RA02-DE???
+  - set_number: RA02-DE002
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
@@ -255,7 +255,7 @@ sets:
     set_name: 2-Player Starter Set
     rarities:
     - Common
-  - set_number: RA02-FR???
+  - set_number: RA02-FR002
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
@@ -328,7 +328,7 @@ sets:
     set_name: 2-Player Starter Set
     rarities:
     - Common
-  - set_number: RA02-IT???
+  - set_number: RA02-IT002
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
@@ -380,7 +380,7 @@ sets:
     set_name: 2-Player Starter Set
     rarities:
     - Common
-  - set_number: RA02-PT???
+  - set_number: RA02-PT002
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
