--- a/data/cards/21502796.yaml
+++ b/data/cards/21502796.yaml
@@ -96,6 +96,16 @@ sets:
     set_name: 'Starter Deck: Codebreaker'
     rarities:
     - Common
+  - set_number: RA02-EN003
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   de:
   - set_number: LODT-DE022
     set_name: Light of Destruction
@@ -134,6 +144,16 @@ sets:
     set_name: 'Starter Deck: Codebreaker'
     rarities:
     - Common
+  - set_number: RA02-DE003
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   fr:
   - set_number: LODT-FR022
     set_name: Light of Destruction
@@ -172,6 +192,16 @@ sets:
     set_name: 'Starter Deck: Codebreaker'
     rarities:
     - Common
+  - set_number: RA02-FR003
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: LODT-IT022
     set_name: Light of Destruction
@@ -210,6 +240,16 @@ sets:
     set_name: 'Starter Deck: Codebreaker'
     rarities:
     - Common
+  - set_number: RA02-IT003
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   pt:
   - set_number: PGLD-PT086
     set_name: Premium Gold
@@ -227,6 +267,16 @@ sets:
     set_name: 'Starter Deck: Codebreaker'
     rarities:
     - Common
+  - set_number: RA02-PT003
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   ja:
   - set_number: LODT-JP022
     set_name: Light of Destruction
