--- a/data/cards/67750322.yaml
+++ b/data/cards/67750322.yaml
@@ -62,6 +62,16 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: RA02-EN005
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   de:
   - set_number: STBL-DE081
     set_name: Starstrike Blast
@@ -79,6 +89,16 @@ sets:
     set_name: Ancient Guardians
     rarities:
     - Rare
+    - Collector's Rare
+  - set_number: RA02-DE005
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
     - Collector's Rare
   fr:
   - set_number: STBL-FR081
@@ -98,6 +118,16 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: RA02-FR005
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: STBL-IT081
     set_name: Starstrike Blast
@@ -116,6 +146,16 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: RA02-IT005
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   pt:
   - set_number: COTD-PTSE1
     set_name: Code of the Duelist Special Edition
@@ -129,6 +169,16 @@ sets:
     set_name: Ancient Guardians
     rarities:
     - Rare
+    - Collector's Rare
+  - set_number: RA02-PT005
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
     - Collector's Rare
   ja:
   - set_number: EXP4-JP022
