--- a/data/cards/85138716.yaml
+++ b/data/cards/85138716.yaml
@@ -66,6 +66,16 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: RA02-EN008
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   de:
   - set_number: PHSW-DE037
     set_name: Photon Shockwave
@@ -83,6 +93,16 @@ sets:
     set_name: King's Court
     rarities:
     - Rare
+    - Collector's Rare
+  - set_number: RA02-DE008
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
     - Collector's Rare
   fr:
   - set_number: PHSW-FR037
@@ -102,6 +122,16 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: RA02-FR008
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: PHSW-IT037
     set_name: Photon Shockwave
@@ -120,6 +150,16 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: RA02-IT008
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   pt:
   - set_number: SR04-PT020
     set_name: Dinosmasher's Fury Structure Deck
@@ -129,6 +169,16 @@ sets:
     set_name: King's Court
     rarities:
     - Rare
+    - Collector's Rare
+  - set_number: RA02-PT008
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
     - Collector's Rare
   ja:
   - set_number: PHSW-JP037
