--- a/data/rush/16159.yaml
+++ b/data/rush/16159.yaml
@@ -74,6 +74,10 @@ sets:
     rarities:
     - Common
     - Super Rare
+  - set_number: RD/SD0B-JP023
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP04-KR038
     set_name: 'Deck Mod Pack: Destined Power Destruction!!'
