--- a/data/rush/16602.yaml
+++ b/data/rush/16602.yaml
@@ -61,6 +61,10 @@ sets:
     set_name: 'Triple Build Pack: Godbreath Wing'
     rarities:
     - Common
+  - set_number: RD/SD0B-JP026
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
   ko:
   - set_number: RD/MAX2-KR035
     set_name: Maximum Ultra Evolution Pack
