--- a/data/rush/16934.yaml
+++ b/data/rush/16934.yaml
@@ -74,6 +74,10 @@ sets:
     set_name: 'Triple Build Pack: Godbreath Wing'
     rarities:
     - Common
+  - set_number: RD/SD0B-JP036
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
   ko:
   - set_number: RD/EXT1-KR050
     set_name: Extra Transcend Enhancement Pack
