--- a/data/rush/16981.yaml
+++ b/data/rush/16981.yaml
@@ -59,6 +59,10 @@ sets:
     set_name: Megaroad Pack 2
     rarities:
     - Rare
+  - set_number: RD/SD0B-JP027
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP07-KR015
     set_name: 'Deck Mod Pack: Chaotic Omega Rising!!'
