--- a/data/rush/17212.yaml
+++ b/data/rush/17212.yaml
@@ -65,6 +65,10 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+  - set_number: RD/SD0B-JP034
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
   ko:
   - set_number: RD/GRP1-KR024
     set_name: Grand Rush Pack
