--- a/data/rush/17333.yaml
+++ b/data/rush/17333.yaml
@@ -56,6 +56,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: RD/SD0B-JP035
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP08-KR057
     set_name: 'Deck Mod Pack: Genesis Master Road!!'
