--- a/data/rush/17515.yaml
+++ b/data/rush/17515.yaml
@@ -57,6 +57,10 @@ sets:
     set_name: 'Deck Mod Pack: Galaxy of Fate!!'
     rarities:
     - Rare
+  - set_number: RD/SD0B-JP022
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP09-KR029
     set_name: 'Deck Mod Pack: Galaxy of Fate!!'
