--- a/data/rush/17885.yaml
+++ b/data/rush/17885.yaml
@@ -57,6 +57,10 @@ sets:
     set_name: 'Deck Mod Pack: Requiem of Destruction!!'
     rarities:
     - Rare
+  - set_number: RD/SD0B-JP024
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP10-KR037
     set_name: 'Deck Mod Pack: Requiem of Destruction!!'
