--- a/data/rush/18610.yaml
+++ b/data/rush/18610.yaml
@@ -69,6 +69,10 @@ sets:
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
     rarities:
     - Ultra Rare
+  - set_number: RD/SD0B-JP016
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP12-KR028
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
