--- a/data/cards/69140098.yaml
+++ b/data/cards/69140098.yaml
@@ -228,6 +228,10 @@ sets:
     set_name: Beginner's Edition 2 (2011)
     rarities:
     - Common
+  - set_number: 24YA-JP001
+    set_name: Duelist King Cup April 2024 prize card
+    rarities:
+    - Quarter Century Secret Rare
   ko:
   - set_number: LON-KR000
     set_name: Labyrinth of Nightmare
