--- a/data/rush/16341.yaml
+++ b/data/rush/16341.yaml
@@ -63,6 +63,10 @@ sets:
     set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
     rarities:
     - Common
+  - set_number: RD/SD0B-JP025
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP05-KR035
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
