--- a/data/rush/16982.yaml
+++ b/data/rush/16982.yaml
@@ -55,6 +55,10 @@ sets:
     set_name: 'Deck Mod Pack: Chaotic Omega Rising!!'
     rarities:
     - Rare
+  - set_number: RD/SD0B-JP020
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP07-KR016
     set_name: 'Deck Mod Pack: Chaotic Omega Rising!!'
