--- a/data/rush/17211.yaml
+++ b/data/rush/17211.yaml
@@ -58,6 +58,10 @@ sets:
     set_name: Tournament Battle September 2023 prize card
     rarities:
     - Ultra Parallel Rare
+  - set_number: RD/SD0B-JP037
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
   ko:
   - set_number: RD/GRP1-KR029
     set_name: Grand Rush Pack
