--- a/data/rush/18381.yaml
+++ b/data/rush/18381.yaml
@@ -60,6 +60,10 @@ sets:
     rarities:
     - Super Rare
     - Over Rush Rare
+  - set_number: RD/SD0B-JP015
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
   ko:
   - set_number: RD/ORP1-KR052
     set_name: Over Rush Pack
