--- a/rush.yaml
+++ b/rush.yaml
@@ -3709,6 +3709,10 @@ sets:
     set_name: Saikyo Starter Deck
     rarities:
     - Common
+  - set_number: RD/SD0B-JP017
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP01-KR016
     set_name: 'Deck Mod Pack: Hyperspeed Rush Road!!'
@@ -6147,6 +6151,10 @@ sets:
     set_name: Phoenix of the Roaring Flame
     rarities:
     - Over Rush Rare
+  - set_number: RD/SD0B-JP018
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
   ko:
   - set_number: RD/SBD3-KR004
     set_name: Strongest Battle Deck Gavin - Demon Commander Three Legions
@@ -10185,6 +10193,10 @@ sets:
     set_name: 'Deck Mod Pack: Shocking Lightning Attack!!'
     rarities:
     - Super Rare
+  - set_number: RD/SD0B-JP040
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP02-KR047
     set_name: 'Deck Mod Pack: Shocking Lightning Attack!!'
@@ -25696,6 +25708,10 @@ sets:
     rarities:
     - Common
     - Super Rare
+  - set_number: RD/SD0B-JP023
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP04-KR038
     set_name: 'Deck Mod Pack: Destined Power Destruction!!'
@@ -30979,6 +30995,10 @@ sets:
     set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
     rarities:
     - Common
+  - set_number: RD/SD0B-JP025
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP05-KR035
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
@@ -35608,6 +35628,10 @@ sets:
     - Super Rare
   - set_number: RD/TB01-JP026
     set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Common
+  - set_number: RD/SD0B-JP026
+    set_name: 'Structure Deck: Birth of Hero'
     rarities:
     - Common
   ko:
@@ -47311,6 +47335,10 @@ sets:
     set_name: 'Triple Build Pack: Godbreath Wing'
     rarities:
     - Common
+  - set_number: RD/SD0B-JP036
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
   ko:
   - set_number: RD/EXT1-KR050
     set_name: Extra Transcend Enhancement Pack
@@ -49050,6 +49078,10 @@ sets:
     set_name: Megaroad Pack 2
     rarities:
     - Rare
+  - set_number: RD/SD0B-JP027
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP07-KR015
     set_name: 'Deck Mod Pack: Chaotic Omega Rising!!'
@@ -49118,6 +49150,10 @@ sets:
     set_name: 'Deck Mod Pack: Chaotic Omega Rising!!'
     rarities:
     - Rare
+  - set_number: RD/SD0B-JP020
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP07-KR016
     set_name: 'Deck Mod Pack: Chaotic Omega Rising!!'
@@ -53951,6 +53987,10 @@ sets:
     set_name: Tournament Battle September 2023 prize card
     rarities:
     - Ultra Parallel Rare
+  - set_number: RD/SD0B-JP037
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
   ko:
   - set_number: RD/GRP1-KR029
     set_name: Grand Rush Pack
@@ -54030,6 +54070,10 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+  - set_number: RD/SD0B-JP034
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
   ko:
   - set_number: RD/GRP1-KR024
     set_name: Grand Rush Pack
@@ -54649,6 +54693,10 @@ sets:
     rarities:
     - Common
     - Super Rare
+  - set_number: RD/SD0B-JP021
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
   ko:
   - set_number: RD/GRP1-KR038
     set_name: Grand Rush Pack
@@ -59541,6 +59589,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: RD/SD0B-JP035
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP08-KR057
     set_name: 'Deck Mod Pack: Genesis Master Road!!'
@@ -62554,6 +62606,10 @@ sets:
     set_name: 'Deck Mod Pack: Galaxy of Fate!!'
     rarities:
     - Rare
+  - set_number: RD/SD0B-JP022
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP09-KR029
     set_name: 'Deck Mod Pack: Galaxy of Fate!!'
@@ -75184,6 +75240,10 @@ sets:
     set_name: 'Deck Mod Pack: Requiem of Destruction!!'
     rarities:
     - Rare
+  - set_number: RD/SD0B-JP024
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP10-KR037
     set_name: 'Deck Mod Pack: Requiem of Destruction!!'
@@ -89710,6 +89770,10 @@ sets:
     rarities:
     - Super Rare
     - Over Rush Rare
+  - set_number: RD/SD0B-JP015
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
   ko:
   - set_number: RD/ORP1-KR052
     set_name: Over Rush Pack
@@ -90808,6 +90872,10 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+  - set_number: RD/SD0B-JP039
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
   ko:
   - set_number: RD/ORP1-KR068
     set_name: Over Rush Pack
@@ -93853,6 +93921,10 @@ sets:
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
     rarities:
     - Ultra Rare
+  - set_number: RD/SD0B-JP016
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP12-KR028
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
@@ -109270,6 +109342,10 @@ sets:
     set_name: 'Triple Build Pack: Godbreath Wing'
     rarities:
     - Normal Parallel Rare
+  - set_number: RD/SD0B-JP019
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
   ko:
   - set_number: RD/TB01-KR027
     set_name: 'Triple Build Pack: Godbreath Wing'
