--- a/data/cards/22624373.yaml
+++ b/data/cards/22624373.yaml
@@ -10,7 +10,7 @@ name:
   ja: ライトロード・マジシャン ライラ
   ja_romaji: Raitorōdo Majishan Raira
   ko: 라이트로드 매지션 라일라
-  ko_rr:
+  ko_rr: Raiteurodeu Maejisyeol Lailla
   zh-TW: 光道魔術師 萊拉
   zh-CN: 光道魔术师 莱拉
 text:
