--- a/data/cards/30502181.yaml
+++ b/data/cards/30502181.yaml
@@ -10,7 +10,7 @@ name:
   ja: ライトロード・レイピア
   ja_romaji: Raitorōdo Reipia
   ko: 라이트로드 레이피어
-  ko_rr:
+  ko_rr: Raiteurodeu Reipieo
   zh-TW: 光道輕劍
   zh-CN: 光道细剑
 text:
