--- a/data/cards/44178886.yaml
+++ b/data/cards/44178886.yaml
@@ -10,7 +10,7 @@ name:
   ja: ライトロード・モンク エイリン
   ja_romaji: Raitorōdo Monku Eirin
   ko: 라이트로드 몽크 에이린
-  ko_rr:
+  ko_rr: Raiteurodeu Mongkeu Eirin
   zh-TW: 光道武僧 愛琳
   zh-CN: 光道武僧 爱琳
 text:
