--- a/data/cards/59019082.yaml
+++ b/data/cards/59019082.yaml
@@ -10,7 +10,7 @@ name:
   ja: ライトロード・ウォリアー ガロス
   ja_romaji: Raitorōdo Woriā Garosu
   ko: 라이트로드 워리어 가로스
-  ko_rr:
+  ko_rr: Raiteurodeu Worieo Garoseu
   zh-TW: 光道戰士 蓋洛斯
   zh-CN: 光道战士 伽罗斯
 text:
