--- a/data/cards/59481082.yaml
+++ b/data/cards/59481082.yaml
@@ -8,9 +8,9 @@ name:
   it: Dragoncello Fedele della Luce
   pt: Dragãozinho Luminoso
   ja: <ruby>光道の龍<rt>ドラグーン・オブ・ライトロード</rt></ruby>
-  ja_romaji: Doragūn Obu Raitorōdo
+  ja_romaji: Doragūn obu Raitorōdo
   ko: 드래곤 오브 라이트로드
-  ko_rr: Deuraegon Obeu Raiteurodeu
+  ko_rr: Deuraegon obeu Raiteurodeu
   zh-TW:
   zh-CN: 光道之龙
 text:
