--- a/data/cards/66194206.yaml
+++ b/data/cards/66194206.yaml
@@ -10,7 +10,7 @@ name:
   ja: ライトロードの<ruby>裁<rt>さば</rt></ruby>き
   ja_romaji: Raitorōdo no Sabaki
   ko: 라이트로드의 심판
-  ko_rr:
+  ko_rr: Raiteurodeuui Simpan
   zh-TW: 光道的制裁
   zh-CN: 光道之裁决
 text:
