--- a/data/cards/83725008.yaml
+++ b/data/cards/83725008.yaml
@@ -10,7 +10,7 @@ name:
   ja: ライトロード・プリースト ジェニス
   ja_romaji: Raitorōdo Purīsuto Jenisu
   ko: 라이트로드 프리스트 제니스
-  ko_rr:
+  ko_rr: Raiteurodeu Peuriseuteu Jeniseu
   zh-TW: 光道祭司 潔妮絲
   zh-CN: 光道祭司 珍妮丝
 text:
