--- a/data/cards/94381039.yaml
+++ b/data/cards/94381039.yaml
@@ -10,7 +10,7 @@ name:
   ja: ライトロード・エンジェル ケルビム
   ja_romaji: Raitorōdo Enjeru Kerubimu
   ko: 라이트로드 엔젤 케루빔
-  ko_rr:
+  ko_rr: Raiteurodeu Enjel Kerubim
   zh-TW: 光道天使 柯魯貝姆
   zh-CN: 光道天使 基路比姆
 text:
