--- a/data/cards/98095162.yaml
+++ b/data/cards/98095162.yaml
@@ -10,7 +10,7 @@ name:
   ja: ライトロード・ドミニオン キュリオス
   ja_romaji: Raitorōdo Dominion Kyuriosu
   ko: 라이트로드 도미니온 큐리오스
-  ko_rr:
+  ko_rr: Raiteurodeu Dominion Kyurioseu
   zh-TW: 光道主宰者 裘里歐斯
   zh-CN: 光道主宰者 居理阿斯
 text:
