--- a/data/cards/10071151.yaml
+++ b/data/cards/10071151.yaml
@@ -10,7 +10,7 @@ name:
   ja: トワイライトロード・ソーサラー ライラ
   ja_romaji: Towairaitorōdo Sōsarā Raira
   ko: 트와일라이트로드 소서러 라일라
-  ko_rr:
+  ko_rr: Teuwaillaiteurodeu Soseoreo Railla
   zh-TW: 暮光道巫師 萊拉
   zh-CN: 暮光道巫师 丽拉
 text:
