--- a/data/cards/21502796.yaml
+++ b/data/cards/21502796.yaml
@@ -43,7 +43,7 @@ text:
   ko: |-
     ①: 이 카드가 리버스했을 경우에 발동한다. 필드의 카드 1장을 고르고 파괴할 수 있다. 자신의 덱 위에서 카드를 3장 묘지로 보낸다.
   zh-TW: |-
-    反转：可选择场上1张卡牌破坏。从我方牌组的上方依序将3张卡牌送入墓地。
+    反轉：可選擇場上1張卡牌破壞。從我方牌組的上方依序將3張卡牌送入墓地。
   zh-CN: |-
     ①：此卡反转的情况下发动。可挑选场上的1张卡破坏。从自己牌组上面将3张卡送至墓地。
 card_type: Monster
