--- a/data/cards/21785144.yaml
+++ b/data/cards/21785144.yaml
@@ -10,7 +10,7 @@ name:
   ja: ライトロード・ドラゴン グラゴニス
   ja_romaji: Raitorōdo Doragon Guragonisu
   ko: 라이트로드 드래곤 그라고니스
-  ko_rr:
+  ko_rr: Raiteurodeu Deuraegon Geuragoniseu
   zh-TW: 光道龍 格拉古尼斯
   zh-CN: 光道龙 格拉古尼斯
 text:
@@ -31,7 +31,7 @@ text:
   ko: |-
     이 카드의 공격력 / 수비력은, 자신 묘지의 "라이트로드"라는 이름이 붙은 몬스터의 종류 × 300 포인트 올린다. 이 카드가 수비 표시 몬스터를 공격했을 때, 그 수비력을 공격력이 넘었으면, 그 수치만큼 상대 라이프에 전투 데미지를 준다. 또한, 자신의 엔드 페이즈마다 발동한다. 자신의 덱 위에서 카드를 3장 묘지로 보낸다.
   zh-TW: |-
-    此卡的攻击力、守备力，上升以我方墓地中冠有「光道」之名的怪兽种类×300点。此卡攻击守备表示怪兽时，若攻击力超过该守备力，给予对手生命相当于该差值的战斗伤害。此外，于每次我方结束阶段时发动。从我方牌组的上方依序将3张卡牌送入墓地。
+    此卡的攻擊力、守備力，上升以我方墓地中冠有「光道」之名的怪獸種類×300點。此卡攻擊守備表示怪獸時，若攻擊力超過該守備力，給予對手生命相當於該差值的戰鬥傷害。此外，於每次我方結束階段時發動。從我方牌組的上方依序將3張卡牌送入墓地。
   zh-CN: |-
     这张卡的攻击力·守备力上升自己墓地的名字带有「光道」的怪兽种类×300的数值。这张卡向守备表示怪兽攻击时，若攻击力超过那个守备力，给与对方基本分那个数值的战斗伤害。此外，每次自己的结束阶段发动。从自己卡组上面把3张卡送去墓地。
 card_type: Monster
