--- a/data/cards/30100551.yaml
+++ b/data/cards/30100551.yaml
@@ -10,7 +10,7 @@ name:
   ja: ライトロード・セイント ミネルバ
   ja_romaji: Raitorōdo Seinto Mineruba
   ko: 라이트로드 세인트 미네르바
-  ko_rr:
+  ko_rr: Raiteurodeu Seinteu Minereuba
   zh-TW: 光道聖女 蜜涅瓦
   zh-CN: 光道圣女 密涅瓦
 text:
