--- a/data/cards/83550869.yaml
+++ b/data/cards/83550869.yaml
@@ -10,7 +10,7 @@ name:
   ja: トワイライトロード・ファイター ライコウ
   ja_romaji: Towairaitorōdo Faitā Raikou
   ko: 트와일라이트로드 파이터 라이코
-  ko_rr:
+  ko_rr: Teuwaillaiteurodeu Paiteo Raiko
   zh-TW: 暮光道戰鬥犬 萊可
   zh-CN: 暮光道斗犬 莱可
 text:
