--- a/data/cards/84673417.yaml
+++ b/data/cards/84673417.yaml
@@ -10,7 +10,7 @@ name:
   ja: トワイライトロード・ジェネラル ジェイン
   ja_romaji: Towairaitorōdo Jeneraru Jein
   ko: 트와일라이트로드 제너럴 제인
-  ko_rr:
+  ko_rr: Teuwaillaiteurodeu Jeneoreol Jein
   zh-TW: 暮光道將軍 傑恩
   zh-CN: 暮光道将军 简
 text:
