--- a/data/cards/95503687.yaml
+++ b/data/cards/95503687.yaml
@@ -10,7 +10,7 @@ name:
   ja: ライトロード・サモナー ルミナス
   ja_romaji: Raitorōdo Samonā Ruminasu
   ko: 라이트로드 서머너 루미나스
-  ko_rr:
+  ko_rr: Raiteurodeu Seomeoneo Ruminaseu
   zh-TW: 光道召喚師 露米娜絲
   zh-CN: 光道召唤士 路米娜丝
 text:
