--- a/data/cards/00691925.yaml
+++ b/data/cards/00691925.yaml
@@ -10,7 +10,7 @@ name:
   ja: ソーラー・エクスチェンジ
   ja_romaji: Sōrā Ekusuchenji
   ko: 솔라 익스체인지
-  ko_rr:
+  ko_rr: Solla Ikseucheinji
   zh-TW: 太陽能轉換
   zh-CN: 太阳能交换
 text:
