--- a/data/cards/06128460.yaml
+++ b/data/cards/06128460.yaml
@@ -10,7 +10,7 @@ name:
   ja: ワイトベイキング
   ja_romaji: Waitobeikingu
   ko: 저주받은 하인 베이킹
-  ko_rr: Jeojubat-eun Ha-in Beiking
+  ko_rr: Jeojubad-eun Hain Beiking
   zh-TW: 白骨薯烤王
   zh-CN: 白骨薯烤王
 text:
