--- a/data/cards/19959563.yaml
+++ b/data/cards/19959563.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>戒めの龍<rt>パニッシュメント・ドラグーン</rt></ruby>
   ja_romaji: Panisshumento Doragūn
   ko: 퍼니시먼트 드래곤
-  ko_rr:
+  ko_rr: Peonisimeonteu Deuragon
   zh-TW: 懲戒之龍
   zh-CN: 惩戒之龙
 text:
