--- a/data/cards/22970795.yaml
+++ b/data/cards/22970795.yaml
@@ -10,7 +10,7 @@ name:
   ja: ワイトロード
   ja_romaji: Waitorōdo
   ko: 저주받은 하인 로드
-  ko_rr: Jejubat-eun Hain Rodeu
+  ko_rr: Jeojubad-eun Hail Lodeu
   zh-TW:
   zh-CN: 白骨道君主
 text:
