--- a/data/cards/29301450.yaml
+++ b/data/cards/29301450.yaml
@@ -56,6 +56,8 @@ link_arrows:
 - ➡
 atk: 1600
 materials: 2 Effect Monsters
+series:
+- P
 images:
 - index: 1
   image: SPLittleKnight-AGOV-EN-ScR-1E.png
