--- a/data/cards/32233746.yaml
+++ b/data/cards/32233746.yaml
@@ -10,7 +10,7 @@ name:
   ja: ライト・バニッシュ
   ja_romaji: Raito Banisshu
   ko: 라이트 배니시
-  ko_rr:
+  ko_rr: = Raiteu Baenisi
   zh-TW: 光之放逐
   zh-CN: 光之放逐
 text:
