--- a/data/cards/36021814.yaml
+++ b/data/cards/36021814.yaml
@@ -10,7 +10,7 @@ name:
   ja: ワイトキング
   ja_romaji: Waitokingu
   ko: 저주받은 하인 킹
-  ko_rr:
+  ko_rr: Jeojubad-eun Hain King
   zh-TW: 白骨王
   zh-CN: 白骨王
 text:
