--- a/data/cards/40991587.yaml
+++ b/data/cards/40991587.yaml
@@ -10,7 +10,7 @@ name:
   ja: ワイト<ruby>夫<rt>ふ</rt></ruby><ruby>人<rt>じん</rt></ruby>
   ja_romaji: Waito Fujin
   ko: 저주받은 하인 부인
-  ko_rr:
+  ko_rr: Jeojubad-eun Hain Buin
   zh-TW: 白骨夫人
   zh-CN: 白骨夫人
 text:
