--- a/data/cards/46186135.yaml
+++ b/data/cards/46186135.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>神光の龍<rt>エンライトメント・ドラグーン</rt></ruby>
   ja_romaji: Enraitomento Doragūn
   ko: 엔라이트멘트 드래곤
-  ko_rr: Enraitementeu Deuraegon
+  ko_rr: Ellaiteumenteu Deuraegon
   zh-TW:
   zh-CN: 神光之龙
 text:
