--- a/data/cards/83747250.yaml
+++ b/data/cards/83747250.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>黄昏の交衣<rt>トワイライト・クロス</rt></ruby>
   ja_romaji: Towairaito Kurosu
   ko: 트와일라이트 크로스
-  ko_rr:
+  ko_rr: Teuwaillaiteu Keuroseu
   zh-TW: 黃昏的交衣
   zh-CN: 黄昏之交衣
 text:
