--- a/data/cards/92125819.yaml
+++ b/data/cards/92125819.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>聖<rt>せい</rt></ruby><ruby>騎<rt>き</rt></ruby><ruby>士<rt>し</rt></ruby>アルトリウス
   ja_romaji: Seikishi Arutoriusu
   ko: 성기사 아르토리우스
-  ko_rr: Seong-gisa Areutoriuseu
+  ko_rr: Seonggisa Areutoriuseu
   zh-TW: 聖騎士阿托利斯
   zh-CN: 圣骑士 阿托利斯
 text:
@@ -68,8 +68,8 @@ text:
     성기사단에 소속된 총명한 청년 기사. 마치 이끌리듯 헤치고 들어간 숲 속에서, 마침내 운명에 직면한다. 그리고 청년은 큰 한 걸음을 내디딘다.
     이것은 만물의 시발점이 되어, 위대한 서사시의 서막을 알린다.
   zh-TW: |-
-    隶属圣骑士团的聪明青年骑士。他仿佛受到指引般纵身入林，终于找到了命运。于是青年迈出了重要的一大步。
-    ——这是一切的滥觞，是一部伟大的叙事诗。
+    隸屬聖騎士團的聰明青年騎士。他彷彿受到指引般縱身入林，終於找到了命運。於是青年邁出了重要的一大步。
+    ——這是一切的濫觴，是一部偉大的敘事詩。
   zh-CN: |-
     属于圣骑士团的聪明青年骑士。仿佛就像受到了引导，闯入了森林之中的他，终于抵达命运的所在。随后，青年迈出了那一大步。——这是一切的开端，一段伟大的史诗。
 card_type: Monster
