--- a/data/cards/96383838.yaml
+++ b/data/cards/96383838.yaml
@@ -10,7 +10,7 @@ name:
   ja: トライワイトゾーン
   ja_romaji: Toraiwaitozōn
   ko: 트라이 저주받은 하인 존
-  ko_rr:
+  ko_rr: Teurai Jeojubad-eun Hain Jon
   zh-TW: 三骨地帶
   zh-CN: 三白骨区
 text:
