--- a/data/cards/22201234.yaml
+++ b/data/cards/22201234.yaml
@@ -10,7 +10,7 @@ name:
   ja: ライトロード・バリア
   ja_romaji: Raitorōdo Baria
   ko: 라이트로드 베리어
-  ko_rr:
+  ko_rr: Raiteurodeu Berieo
   zh-TW: 光道防護罩
   zh-CN: 光道防护罩
 text:
