--- a/data/cards/22339232.yaml
+++ b/data/cards/22339232.yaml
@@ -10,7 +10,7 @@ name:
   ja: ワイトメア
   ja_romaji: Waitomea
   ko: 저주받은 하인 메어
-  ko_rr:
+  ko_rr: Jeojubad-eun Hain Meeo
   zh-TW: 白骨惡夢
   zh-CN: 白骨梦魇
 text:
