--- a/data/cards/57473560.yaml
+++ b/data/cards/57473560.yaml
@@ -10,7 +10,7 @@ name:
   ja: ワイトプリンス
   ja_romaji: Waitopurinsu
   ko: 저주받은 하인 프린스
-  ko_rr:
+  ko_rr: Jeojubad-eun Hain Peurinseu
   zh-TW: 白骨王子
   zh-CN: 白骨皇子
 text:
