--- a/data/cards/57774843.yaml
+++ b/data/cards/57774843.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>裁きの龍<rt>ジャッジメント・ドラグーン</rt></ruby>
   ja_romaji: Jajjimento Doragūn
   ko: 저지먼트 드래곤
-  ko_rr:
+  ko_rr: Jeojimeonteu Deuraegon
   zh-TW: 制裁之龍
   zh-CN: 裁决之龙
 text:
