--- a/data/cards/60228941.yaml
+++ b/data/cards/60228941.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>暗<rt>あん</rt></ruby><ruby>黒<rt>こく</rt></ruby><ruby>界<rt>かい</rt></ruby>の<ruby>術<rt>じゅつ</rt></ruby><ruby>師<rt>し</rt></ruby> スノウ
   ja_romaji: Ankokukai no Jutsushi Sunou
   ko: 암흑계의 술사 스노우
-  ko_rr: Amheukgye-ui Sulsa Seunou
+  ko_rr: Amheukgyeui Sulsa Seunou
   zh-TW: 暗黑界之術師 白諾
   zh-CN: 暗黑界的术师 丝诺
 text:
@@ -33,7 +33,7 @@ text:
     ①: 이 카드가 효과로 패에서 묘지로 버려졌을 경우에 발동한다. 덱에서 "암흑계" 카드 1장을 패에 넣는다. 상대 효과로 버려졌을 경우, 발동시에 상대 묘지의 몬스터 1장을 대상으로 할 수 있다. 그 경우, 추가로 이하의 효과를 적용한다.
     ●대상의 몬스터를 자신 필드에 수비 표시로 특수 소환한다.
   zh-TW: |-
-    此卡因卡牌效果从手牌被舍弃至墓地的场合，从我方牌组中将1张冠有「暗黑界」之名的卡牌加入手牌。因对手卡牌效果被舍弃的场合，可另选择对手墓地中的1只怪兽，以表侧守备表示特殊召唤至我方场上。
+    此卡因卡牌效果從手牌被捨棄至墓地的場合，從我方牌組中將1張冠有「暗黑界」之名的卡牌加入手牌。因對手卡牌效果被捨棄的場合，可另選擇對手墓地中的1隻怪獸，以表側守備表示特殊召喚至我方場上。
   zh-CN: |-
     这张卡被卡的效果从手卡丢弃去墓地的场合，从自己卡组把1张名字带有「暗黑界」的卡加入手卡。被对方的卡的效果丢弃的场合，可以再选择对方墓地存在的1只怪兽在自己场上表侧守备表示特殊召唤。
 card_type: Monster
