--- a/data/cards/60431417.yaml
+++ b/data/cards/60431417.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>黄昏の双龍<rt>トワイライト・ツイン・ドラグーン</rt></ruby>
   ja_romaji: Towairaito Tsuin Doragūn
   ko: 트와일라이트 트윈 드래곤
-  ko_rr:
+  ko_rr: Teuwaillaiteu Teuwin Deuragon
   zh-TW: 黃昏之雙龍
   zh-CN: 黄昏之双龙
 text:
