--- a/data/cards/90243945.yaml
+++ b/data/cards/90243945.yaml
@@ -10,7 +10,7 @@ name:
   ja: ワイトプリンセス
   ja_romaji: Waitopurinsesu
   ko: 저주받은 하인 프린세스
-  ko_rr:
+  ko_rr: Jeojubad-eun Hain Peurinseseu
   zh-TW: 白骨公主
   zh-CN: 白骨公主
 text:
