--- a/rush.yaml
+++ b/rush.yaml
@@ -141028,7 +141028,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 3 cards of your Deck to the Graveyard. Then, you can add 1 Pyro/Aqua/Thunder Type monster with the same Level as [the Level of the monster revealed to meet the requirement] from among the cards sent to your hand.
+    Send the top 3 cards of your Deck to the Graveyard. Then, you can add to your hand 1 Pyro/Aqua/Thunder Type monster with the same Level as [the Level of the monster revealed to meet the requirement] from among the cards sent.
   de:
   es:
   fr:
@@ -145495,7 +145495,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up Warrior monster on your field gains 1000 ATK until the end of your opponent's next turn. Then, you can destroy 1 Spell/Trap Card on your opponent's field.
+    1 face-up Warrior Type monster on your field gains 1000 ATK until the end of your opponent's next turn. Then, you can destroy 1 Spell/Trap Card on your opponent's field.
   de:
   es:
   fr:
