--- a/data/rush/20384.yaml
+++ b/data/rush/20384.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 20384
 name:
   en: The Twin Dragons of the Heavens
   de:
@@ -20,7 +20,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    万世に天地廻る気高き光。威を以て平かにし、神の理をも動かさん。
   ko:
   zh-TW:
   zh-CN:
