--- a/data/rush/yugipedia1059072.yaml
+++ b/data/rush/yugipedia1059072.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have no other cards in your hand or field during your Main Phase that you Normal or Special Summoned this card.
+    You have no other cards in your hand or field during your Main Phase that you Normal Summoned or Special Summoned this card.
   de:
   es:
   fr:
