--- a/data/rush/19972.yaml
+++ b/data/rush/19972.yaml
@@ -49,6 +49,8 @@ def: 1500
 images:
 - index: 1
   image: SevensFearMagician-RDKP16-JP-SR.png
+- index: 2
+  image: SevensFearMagician-RDBDG8-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP16-JP024
