--- a/data/cards/82112775.yaml
+++ b/data/cards/82112775.yaml
@@ -8,7 +8,7 @@ name:
   it: D.D.M. - Maestro dall'Altra Dimensione
   pt: M.D.D. - Mestre de uma Dimensão Diferente
   ja: <ruby>Ｄ・Ｄ・Ｍ<rt>ディファレント・ディメンション・マスター</rt></ruby>
-  ja_romaji: Difarento Dimenshan Masutā
+  ja_romaji: Difarento Dimenshon Masutā
   ko: D·D·M
   ko_rr:
   zh-TW: D・D・M
