--- a/data/cards/15180041.yaml
+++ b/data/cards/15180041.yaml
@@ -51,7 +51,7 @@ sets:
     set_name: 'Duelist Pack: Rivals of the Pharaoh'
     rarities:
     - Ultra Rare
-  - set_number: RA02-EN???
+  - set_number: RA02-EN011
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
@@ -66,7 +66,7 @@ sets:
     set_name: 'Duelist Pack: Rivals of the Pharaoh'
     rarities:
     - Ultra Rare
-  - set_number: RA02-DE???
+  - set_number: RA02-DE011
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
@@ -81,7 +81,7 @@ sets:
     set_name: 'Duelist Pack: Rivals of the Pharaoh'
     rarities:
     - Ultra Rare
-  - set_number: RA02-FR???
+  - set_number: RA02-FR011
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
@@ -96,7 +96,7 @@ sets:
     set_name: 'Duelist Pack: Rivals of the Pharaoh'
     rarities:
     - Ultra Rare
-  - set_number: RA02-IT???
+  - set_number: RA02-IT011
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
@@ -111,7 +111,7 @@ sets:
     set_name: 'Duelist Pack: Rivals of the Pharaoh'
     rarities:
     - Ultra Rare
-  - set_number: RA02-PT???
+  - set_number: RA02-PT011
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
