--- a/data/cards/41175645.yaml
+++ b/data/cards/41175645.yaml
@@ -55,7 +55,7 @@ sets:
     set_name: 'Duelist Pack: Rivals of the Pharaoh'
     rarities:
     - Ultra Rare
-  - set_number: RA02-EN???
+  - set_number: RA02-EN012
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
@@ -70,7 +70,7 @@ sets:
     set_name: 'Duelist Pack: Rivals of the Pharaoh'
     rarities:
     - Ultra Rare
-  - set_number: RA02-DE???
+  - set_number: RA02-DE012
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
@@ -85,7 +85,7 @@ sets:
     set_name: 'Duelist Pack: Rivals of the Pharaoh'
     rarities:
     - Ultra Rare
-  - set_number: RA02-FR???
+  - set_number: RA02-FR012
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
@@ -100,7 +100,7 @@ sets:
     set_name: 'Duelist Pack: Rivals of the Pharaoh'
     rarities:
     - Ultra Rare
-  - set_number: RA02-IT???
+  - set_number: RA02-IT012
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
@@ -115,7 +115,7 @@ sets:
     set_name: 'Duelist Pack: Rivals of the Pharaoh'
     rarities:
     - Ultra Rare
-  - set_number: RA02-PT???
+  - set_number: RA02-PT012
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
