--- a/data/cards/52038441.yaml
+++ b/data/cards/52038441.yaml
@@ -68,7 +68,7 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Super Rare
-  - set_number: RA02-EN???
+  - set_number: RA02-EN015
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
@@ -96,7 +96,7 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Super Rare
-  - set_number: RA02-DE???
+  - set_number: RA02-DE015
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
@@ -124,7 +124,7 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Super Rare
-  - set_number: RA02-FR???
+  - set_number: RA02-FR015
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
@@ -152,7 +152,7 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Super Rare
-  - set_number: RA02-IT???
+  - set_number: RA02-IT015
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
@@ -180,7 +180,7 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Super Rare
-  - set_number: RA02-PT???
+  - set_number: RA02-PT015
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
