--- a/data/cards/04810828.yaml
+++ b/data/cards/04810828.yaml
@@ -59,7 +59,7 @@ sets:
     set_name: Amazing Defenders
     rarities:
     - Rare
-  - set_number: RA02-EN???
+  - set_number: RA02-EN019
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
@@ -82,7 +82,7 @@ sets:
     set_name: Amazing Defenders
     rarities:
     - Rare
-  - set_number: RA02-DE???
+  - set_number: RA02-DE019
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
@@ -105,7 +105,7 @@ sets:
     set_name: Amazing Defenders
     rarities:
     - Rare
-  - set_number: RA02-FR???
+  - set_number: RA02-FR019
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
@@ -128,7 +128,7 @@ sets:
     set_name: Amazing Defenders
     rarities:
     - Rare
-  - set_number: RA02-IT???
+  - set_number: RA02-IT019
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
@@ -151,7 +151,7 @@ sets:
     set_name: Amazing Defenders
     rarities:
     - Rare
-  - set_number: RA02-PT???
+  - set_number: RA02-PT019
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
