--- a/data/cards/06855503.yaml
+++ b/data/cards/06855503.yaml
@@ -64,6 +64,16 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Super Rare
+  - set_number: RA02-EN022
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   de:
   - set_number: BODE-DE038
     set_name: Burst of Destiny
@@ -73,6 +83,16 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Super Rare
+  - set_number: RA02-DE022
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   fr:
   - set_number: BODE-FR038
     set_name: Burst of Destiny
@@ -82,6 +102,16 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Super Rare
+  - set_number: RA02-FR022
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: BODE-IT038
     set_name: Burst of Destiny
@@ -91,6 +121,16 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Super Rare
+  - set_number: RA02-IT022
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   pt:
   - set_number: BODE-PT038
     set_name: Burst of Destiny
@@ -100,6 +140,16 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Super Rare
+  - set_number: RA02-PT022
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   ja:
   - set_number: BODE-JP038
     set_name: Burst of Destiny
