--- a/data/cards/12266229.yaml
+++ b/data/cards/12266229.yaml
@@ -58,6 +58,16 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Prismatic Secret Rare
+  - set_number: RA02-EN020
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   de:
   - set_number: BACH-DE034
     set_name: Battle of Chaos
@@ -68,6 +78,16 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Prismatic Secret Rare
+  - set_number: RA02-DE020
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   fr:
   - set_number: BACH-FR034
     set_name: Battle of Chaos
@@ -78,6 +98,16 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Prismatic Secret Rare
+  - set_number: RA02-FR020
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: BACH-IT034
     set_name: Battle of Chaos
@@ -88,6 +118,16 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Prismatic Secret Rare
+  - set_number: RA02-IT020
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   pt:
   - set_number: BACH-PT034
     set_name: Battle of Chaos
@@ -98,6 +138,16 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Prismatic Secret Rare
+  - set_number: RA02-PT020
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   ja:
   - set_number: BACH-JP034
     set_name: Battle of Chaos
