--- a/data/cards/30576089.yaml
+++ b/data/cards/30576089.yaml
@@ -56,6 +56,16 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Prismatic Secret Rare
+  - set_number: RA02-EN017
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   de:
   - set_number: BACH-DE004
     set_name: Battle of Chaos
@@ -66,6 +76,16 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Prismatic Secret Rare
+  - set_number: RA02-DE017
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   fr:
   - set_number: BACH-FR004
     set_name: Battle of Chaos
@@ -76,6 +96,16 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Prismatic Secret Rare
+  - set_number: RA02-FR017
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: BACH-IT004
     set_name: Battle of Chaos
@@ -86,6 +116,16 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Prismatic Secret Rare
+  - set_number: RA02-IT017
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   pt:
   - set_number: BACH-PT004
     set_name: Battle of Chaos
@@ -96,6 +136,16 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Prismatic Secret Rare
+  - set_number: RA02-PT017
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   ja:
   - set_number: BACH-JP004
     set_name: Battle of Chaos
