--- a/data/cards/38517737.yaml
+++ b/data/cards/38517737.yaml
@@ -72,6 +72,16 @@ sets:
     set_name: Blue-Eyes Alternative White Dragon Sweepstakes
     rarities:
     - Secret Rare
+  - set_number: RA02-EN010
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   de:
   - set_number: MVP1-DE046
     set_name: Yu-Gi-Oh! The Dark Side of Dimensions Movie Pack
@@ -93,6 +103,16 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ghost Rare
+  - set_number: RA02-DE010
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   fr:
   - set_number: MVP1-FR046
     set_name: Yu-Gi-Oh! The Dark Side of Dimensions Movie Pack
@@ -114,6 +134,16 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ghost Rare
+  - set_number: RA02-FR010
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: MVP1-IT046
     set_name: Yu-Gi-Oh! The Dark Side of Dimensions Movie Pack
@@ -135,6 +165,16 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ghost Rare
+  - set_number: RA02-IT010
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   pt:
   - set_number: MVP1-PT046
     set_name: Yu-Gi-Oh! The Dark Side of Dimensions Movie Pack
@@ -156,6 +196,16 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ghost Rare
+  - set_number: RA02-PT010
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   ja:
   - set_number: MVPC-JP000
     set_name: Yu-Gi-Oh! The Dark Side of Dimensions Advance Ticket promotional card
