--- a/data/cards/51409648.yaml
+++ b/data/cards/51409648.yaml
@@ -62,26 +62,76 @@ sets:
     set_name: Photon Hypernova
     rarities:
     - Ultra Rare
+  - set_number: RA02-EN025
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   de:
   - set_number: PHHY-DE034
     set_name: Photon Hypernova
     rarities:
     - Ultra Rare
+  - set_number: RA02-DE025
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   fr:
   - set_number: PHHY-FR034
     set_name: Photon Hypernova
     rarities:
     - Ultra Rare
+  - set_number: RA02-FR025
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: PHHY-IT034
     set_name: Photon Hypernova
     rarities:
     - Ultra Rare
+  - set_number: RA02-IT025
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   pt:
   - set_number: PHHY-PT034
     set_name: Photon Hypernova
     rarities:
     - Ultra Rare
+  - set_number: RA02-PT025
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   ja:
   - set_number: PHHY-JP034
     set_name: Photon Hypernova
