--- a/data/cards/52687916.yaml
+++ b/data/cards/52687916.yaml
@@ -98,6 +98,16 @@ sets:
     set_name: 'Hidden Arsenal: Chapter 1'
     rarities:
     - Duel Terminal Ultra Parallel Rare
+  - set_number: RA02-EN026
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   - set_number: DT04-EN092
     set_name: Duel Terminal 4
     rarities:
@@ -143,6 +153,16 @@ sets:
     set_name: 'Hidden Arsenal: Chapter 1'
     rarities:
     - Duel Terminal Ultra Parallel Rare
+  - set_number: RA02-DE026
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   fr:
   - set_number: HA04-FR060
     set_name: "Hidden Arsenal 4: Trishula's Triumph"
@@ -184,6 +204,16 @@ sets:
     set_name: 'Hidden Arsenal: Chapter 1'
     rarities:
     - Duel Terminal Ultra Parallel Rare
+  - set_number: RA02-FR026
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: HA04-IT060
     set_name: "Hidden Arsenal 4: Trishula's Triumph"
@@ -225,6 +255,16 @@ sets:
     set_name: 'Hidden Arsenal: Chapter 1'
     rarities:
     - Duel Terminal Ultra Parallel Rare
+  - set_number: RA02-IT026
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   pt:
   - set_number: HSRD-PT052
     set_name: High-Speed Riders
@@ -262,6 +302,16 @@ sets:
     set_name: 'Hidden Arsenal: Chapter 1'
     rarities:
     - Duel Terminal Ultra Parallel Rare
+  - set_number: RA02-PT026
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   ja:
   - set_number: DT08-JP042
     set_name: Duel Terminal - Pulse of the Trishula!!
