--- a/data/cards/62962630.yaml
+++ b/data/cards/62962630.yaml
@@ -67,6 +67,16 @@ sets:
     set_name: OTS Tournament Pack 20
     rarities:
     - Ultimate Rare
+  - set_number: RA02-EN016
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   de:
   - set_number: DAMA-DE006
     set_name: Dawn of Majesty
@@ -84,6 +94,16 @@ sets:
     set_name: OTS Tournament Pack 20
     rarities:
     - Ultimate Rare
+  - set_number: RA02-DE016
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   fr:
   - set_number: DAMA-FR006
     set_name: Dawn of Majesty
@@ -101,6 +121,16 @@ sets:
     set_name: OTS Tournament Pack 20
     rarities:
     - Ultimate Rare
+  - set_number: RA02-FR016
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: DAMA-IT006
     set_name: Dawn of Majesty
@@ -118,6 +148,16 @@ sets:
     set_name: OTS Tournament Pack 20
     rarities:
     - Ultimate Rare
+  - set_number: RA02-IT016
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   pt:
   - set_number: DAMA-PT006
     set_name: Dawn of Majesty
@@ -135,6 +175,16 @@ sets:
     set_name: OTS Tournament Pack 20
     rarities:
     - Ultimate Rare
+  - set_number: RA02-PT016
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   ja:
   - set_number: DAMA-JP006
     set_name: Dawn of Majesty
