--- a/data/cards/50954680.yaml
+++ b/data/cards/50954680.yaml
@@ -79,6 +79,16 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ghost Rare
+  - set_number: RA02-EN029
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   de:
   - set_number: SHVI-DE049
     set_name: Shining Victories
@@ -100,6 +110,16 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ghost Rare
+  - set_number: RA02-DE029
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   fr:
   - set_number: SHVI-FR049
     set_name: Shining Victories
@@ -121,6 +141,16 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ghost Rare
+  - set_number: RA02-FR029
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: SHVI-IT049
     set_name: Shining Victories
@@ -142,6 +172,16 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ghost Rare
+  - set_number: RA02-IT029
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   pt:
   - set_number: SHVI-PT049
     set_name: Shining Victories
@@ -163,6 +203,16 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ghost Rare
+  - set_number: RA02-PT029
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   ja:
   - set_number: SHVI-JP049
     set_name: Shining Victories
