--- a/data/rush/17290.yaml
+++ b/data/rush/17290.yaml
@@ -64,4 +64,8 @@ sets:
     set_name: 'Deck Mod Pack: Genesis Master Road!!'
     rarities:
     - Super Rare
+  - set_number: RD/EV05-KR011
+    set_name: Rush Duel Event Pack 2024 Vol.1
+    rarities:
+    - Common
 yugipedia_page_id: 717352
