--- a/data/cards/21044178.yaml
+++ b/data/cards/21044178.yaml
@@ -80,6 +80,16 @@ sets:
     set_name: OTS Tournament Pack 20
     rarities:
     - Common
+  - set_number: RA02-EN033
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   de:
   - set_number: ABYR-DE084
     set_name: Abyss Rising
@@ -105,6 +115,16 @@ sets:
     set_name: OTS Tournament Pack 20
     rarities:
     - Common
+  - set_number: RA02-DE033
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   fr:
   - set_number: ABYR-FR084
     set_name: Abyss Rising
@@ -130,6 +150,16 @@ sets:
     set_name: OTS Tournament Pack 20
     rarities:
     - Common
+  - set_number: RA02-FR033
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: ABYR-IT084
     set_name: Abyss Rising
@@ -155,6 +185,16 @@ sets:
     set_name: OTS Tournament Pack 20
     rarities:
     - Common
+  - set_number: RA02-IT033
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   pt:
   - set_number: THSF-PT047
     set_name: The Secret Forces
@@ -176,6 +216,16 @@ sets:
     set_name: OTS Tournament Pack 20
     rarities:
     - Common
+  - set_number: RA02-PT033
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   ja:
   - set_number: EP13-JP025
     set_name: 'Extra Pack: Sword of Knights'
