--- a/data/cards/42566602.yaml
+++ b/data/cards/42566602.yaml
@@ -68,6 +68,16 @@ sets:
     set_name: 2-Player Starter Set
     rarities:
     - Ultra Rare
+  - set_number: RA02-EN031
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   de:
   - set_number: TDIL-DE051
     set_name: The Dark Illusion
@@ -81,6 +91,16 @@ sets:
     set_name: 2-Player Starter Set
     rarities:
     - Ultra Rare
+  - set_number: RA02-DE031
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   fr:
   - set_number: TDIL-FR051
     set_name: The Dark Illusion
@@ -94,6 +114,16 @@ sets:
     set_name: 2-Player Starter Set
     rarities:
     - Ultra Rare
+  - set_number: RA02-FR031
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: TDIL-IT051
     set_name: The Dark Illusion
@@ -107,6 +137,16 @@ sets:
     set_name: 2-Player Starter Set
     rarities:
     - Ultra Rare
+  - set_number: RA02-IT031
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   pt:
   - set_number: TDIL-PT051
     set_name: The Dark Illusion
@@ -120,6 +160,16 @@ sets:
     set_name: 2-Player Starter Set
     rarities:
     - Ultra Rare
+  - set_number: RA02-PT031
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   ja:
   - set_number: TDIL-JP051
     set_name: The Dark Illusion
