--- a/data/cards/46789706.yaml
+++ b/data/cards/46789706.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 20383
+password: 46789706
 name:
   en: Detonating Kuriboh
   de:
@@ -22,7 +22,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：フィールドに「クリボー」モンスターカードが存在する場合に発動できる。このカードを手札から特殊召喚する。②：相手がフィールドのモンスターの効果を発動した時に発動できる。自分フィールドのこのカードを以下の効果を持つ装備魔法カード扱いでその相手モンスターに装備する。●装備モンスターの効果は無効化される。
   ko:
   zh-TW:
   zh-CN:
@@ -46,7 +47,7 @@ sets:
     - Ultra Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 is_translation_unofficial:
   name:
     en: true
