--- a/data/cards/59242457.yaml
+++ b/data/cards/59242457.yaml
@@ -67,30 +67,80 @@ sets:
     rarities:
     - Ultra Rare
     - Starlight Rare
+  - set_number: RA02-EN038
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   de:
   - set_number: DIFO-DE046
     set_name: Dimension Force
     rarities:
     - Ultra Rare
     - Starlight Rare
+  - set_number: RA02-DE038
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   fr:
   - set_number: DIFO-FR046
     set_name: Dimension Force
     rarities:
     - Ultra Rare
     - Starlight Rare
+  - set_number: RA02-FR038
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: DIFO-IT046
     set_name: Dimension Force
     rarities:
     - Ultra Rare
     - Starlight Rare
+  - set_number: RA02-IT038
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   pt:
   - set_number: DIFO-PT046
     set_name: Dimension Force
     rarities:
     - Ultra Rare
     - Starlight Rare
+  - set_number: RA02-PT038
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   ja:
   - set_number: DIFO-JP046
     set_name: Dimension Force
