--- a/data/cards/59822133.yaml
+++ b/data/cards/59822133.yaml
@@ -70,6 +70,16 @@ sets:
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Ultra Rare
+  - set_number: RA02-EN030
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   de:
   - set_number: SHVI-DE052
     set_name: Shining Victories
@@ -83,6 +93,16 @@ sets:
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Ultra Rare
+  - set_number: RA02-DE030
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   fr:
   - set_number: SHVI-FR052
     set_name: Shining Victories
@@ -96,6 +116,16 @@ sets:
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Ultra Rare
+  - set_number: RA02-FR030
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: SHVI-IT052
     set_name: Shining Victories
@@ -109,6 +139,16 @@ sets:
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Ultra Rare
+  - set_number: RA02-IT030
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   pt:
   - set_number: SHVI-PT052
     set_name: Shining Victories
@@ -122,6 +162,16 @@ sets:
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Ultra Rare
+  - set_number: RA02-PT030
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   ja:
   - set_number: SHVI-JP052
     set_name: Shining Victories
