--- a/data/cards/62709239.yaml
+++ b/data/cards/62709239.yaml
@@ -79,6 +79,16 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Super Rare
+  - set_number: RA02-EN035
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   de:
   - set_number: WIRA-DE006
     set_name: Wing Raiders
@@ -100,6 +110,16 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Super Rare
+  - set_number: RA02-DE035
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   fr:
   - set_number: WIRA-FR006
     set_name: Wing Raiders
@@ -121,6 +141,16 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Super Rare
+  - set_number: RA02-FR035
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: WIRA-IT006
     set_name: Wing Raiders
@@ -142,6 +172,16 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Super Rare
+  - set_number: RA02-IT035
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   pt:
   - set_number: WIRA-PT006
     set_name: Wing Raiders
@@ -163,6 +203,16 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Super Rare
+  - set_number: RA02-PT035
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   ja:
   - set_number: SPWR-JP006
     set_name: 'Booster SP: Wing Raiders'
