--- a/data/cards/66011101.yaml
+++ b/data/cards/66011101.yaml
@@ -101,6 +101,16 @@ sets:
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ultra Rare
+  - set_number: RA02-EN037
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   de:
   - set_number: BLHR-DE028
     set_name: "Battles of Legend: Hero's Revenge"
@@ -110,6 +120,16 @@ sets:
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ultra Rare
+  - set_number: RA02-DE037
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   fr:
   - set_number: BLHR-FR028
     set_name: "Battles of Legend: Hero's Revenge"
@@ -119,6 +139,16 @@ sets:
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ultra Rare
+  - set_number: RA02-FR037
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: BLHR-IT028
     set_name: "Battles of Legend: Hero's Revenge"
@@ -128,6 +158,16 @@ sets:
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ultra Rare
+  - set_number: RA02-IT037
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   pt:
   - set_number: BLHR-PT028
     set_name: "Battles of Legend: Hero's Revenge"
@@ -137,6 +177,16 @@ sets:
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ultra Rare
+  - set_number: RA02-PT037
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   ja:
   - set_number: CP19-JP031
     set_name: 'Collection Pack: Duelist of Revolution Version'
