--- a/data/cards/74586817.yaml
+++ b/data/cards/74586817.yaml
@@ -74,6 +74,16 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: RA02-EN028
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   de:
   - set_number: HSRD-DE035
     set_name: High-Speed Riders
@@ -91,6 +101,16 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: RA02-DE028
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   fr:
   - set_number: HSRD-FR035
     set_name: High-Speed Riders
@@ -108,6 +128,16 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: RA02-FR028
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: HSRD-IT035
     set_name: High-Speed Riders
@@ -125,6 +155,16 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: RA02-IT028
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   pt:
   - set_number: HSRD-PT035
     set_name: High-Speed Riders
@@ -142,6 +182,16 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: RA02-PT028
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   ja:
   - set_number: SPHR-JP035
     set_name: 'Booster SP: Highspeed Riders'
