--- a/data/cards/90953320.yaml
+++ b/data/cards/90953320.yaml
@@ -78,6 +78,16 @@ sets:
     set_name: OTS Tournament Pack 23
     rarities:
     - Common
+  - set_number: RA02-EN027
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   - set_number: JUMP-EN051
     set_name: Shonen Jump June/July 2011 subscription bonus
     rarities:
@@ -99,6 +109,16 @@ sets:
     set_name: OTS Tournament Pack 23
     rarities:
     - Common
+  - set_number: RA02-DE027
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   fr:
   - set_number: REDU-FRSE1
     set_name: 'Return of the Duelist: Special Edition'
@@ -116,6 +136,16 @@ sets:
     set_name: OTS Tournament Pack 23
     rarities:
     - Common
+  - set_number: RA02-FR027
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: REDU-ITSE1
     set_name: 'Return of the Duelist: Special Edition'
@@ -133,6 +163,16 @@ sets:
     set_name: OTS Tournament Pack 23
     rarities:
     - Common
+  - set_number: RA02-IT027
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   pt:
   - set_number: LC5D-PT211
     set_name: Legendary Collection 5D's Mega Pack
@@ -146,6 +186,16 @@ sets:
     set_name: OTS Tournament Pack 23
     rarities:
     - Common
+  - set_number: RA02-PT027
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   ja:
   - set_number: WJMP-JP016
     set_name: Weekly Shōnen Jump 2011, Issue 2 promotional card
