--- a/data/rush/16783.yaml
+++ b/data/rush/16783.yaml
@@ -75,4 +75,9 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Common
+  - set_number: RD/EV05-KR005
+    set_name: Rush Duel Event Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Secret Rare
 yugipedia_page_id: 715122
