--- a/data/rush/18364.yaml
+++ b/data/rush/18364.yaml
@@ -67,6 +67,11 @@ sets:
     set_name: Over Rush Pack
     rarities:
     - Common
+  - set_number: RD/EV05-KR004
+    set_name: Rush Duel Event Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
