--- a/data/rush/18603.yaml
+++ b/data/rush/18603.yaml
@@ -67,6 +67,11 @@ sets:
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
     rarities:
     - Rare
+  - set_number: RD/EV05-KR002
+    set_name: Rush Duel Event Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
