--- a/data/rush/19236.yaml
+++ b/data/rush/19236.yaml
@@ -40,4 +40,9 @@ sets:
     set_name: Rush Duel Promotion Pack 2024
     rarities:
     - Normal Parallel Rare
+  ko:
+  - set_number: RD/EV05-KR010
+    set_name: Rush Duel Event Pack 2024 Vol.1
+    rarities:
+    - Common
 yugipedia_page_id: 1034822
