--- a/data/rush/19271.yaml
+++ b/data/rush/19271.yaml
@@ -56,6 +56,12 @@ sets:
     set_name: Jump Victory Carnival 2023 promotional card
     rarities:
     - Ultra Rare
+  ko:
+  - set_number: RD/EV05-KR006
+    set_name: Rush Duel Event Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   text:
     en: true
