--- a/data/rush/19455.yaml
+++ b/data/rush/19455.yaml
@@ -68,6 +68,12 @@ sets:
     set_name: Yu-Gi-Oh! GO RUSH!! Volume 3 promotional card
     rarities:
     - Ultra Rare
+  ko:
+  - set_number: RD/EV05-KR007
+    set_name: Rush Duel Event Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
