--- a/data/rush/19931.yaml
+++ b/data/rush/19931.yaml
@@ -40,6 +40,11 @@ sets:
     set_name: Battle Pack 2023 Vol.4
     rarities:
     - Common
+  ko:
+  - set_number: RD/EV05-KR009
+    set_name: Rush Duel Event Pack 2024 Vol.1
+    rarities:
+    - Common
 is_translation_unofficial:
   name:
     en: true
