--- a/data/rush/19927.yaml
+++ b/data/rush/19927.yaml
@@ -53,6 +53,11 @@ sets:
     set_name: Rush Duel Promotion Pack 2024
     rarities:
     - Normal Parallel Rare
+  ko:
+  - set_number: RD/EV05-KR012
+    set_name: Rush Duel Event Pack 2024 Vol.1
+    rarities:
+    - Common
 is_translation_unofficial:
   name:
     en: true
