--- a/data/rush/18645.yaml
+++ b/data/rush/18645.yaml
@@ -56,6 +56,10 @@ sets:
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
     rarities:
     - Super Rare
+  - set_number: RD/EV05-KR018
+    set_name: Rush Duel Event Pack 2024 Vol.1
+    rarities:
+    - Common
 is_translation_unofficial:
   name:
     en: true
