--- a/data/rush/19444.yaml
+++ b/data/rush/19444.yaml
@@ -51,6 +51,11 @@ sets:
     set_name: Rush Duel Card Game Gum
     rarities:
     - Normal Parallel Rare
+  ko:
+  - set_number: RD/EV05-KR016
+    set_name: Rush Duel Event Pack 2024 Vol.1
+    rarities:
+    - Common
 is_translation_unofficial:
   text:
     en: true
