--- a/rush.yaml
+++ b/rush.yaml
@@ -136358,7 +136358,7 @@ series:
 - Psychic Musician
 images:
 - index: 1
-  image: DreamLive-RDTDPR-JP-OP.png
+  image: DreamLive-RDTDPR-JP-NPR.png
 sets:
   ja:
   - set_number: RD/TDPR-JP004
