--- a/rush.yaml
+++ b/rush.yaml
@@ -6241,6 +6241,10 @@ sets:
     set_name: Grand Rush Pack
     rarities:
     - Secret Rare
+  - set_number: RD/P000-KR003
+    set_name: High-Grade Collection Instant Lottery Event
+    rarities:
+    - Over Rush Rare
 yugipedia_page_id: 716405
 ---
 konami_id: 15352
