--- a/data/cards/yugipedia1059907.yaml
+++ b/data/cards/yugipedia1059907.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>ＡｔｏＺ<rt>エートゥズィ</rt></ruby>エナジーロード
-  ja_romaji: Ē tu Zi Enajī Rōdo
+  ja_romaji: Ē Tu Zi Enajī Rōdo
   ko:
   ko_rr:
   zh-TW:
