--- a/data/cards/71283180.yaml
+++ b/data/cards/71283180.yaml
@@ -35,7 +35,7 @@ text:
   zh-CN: |-
     反转：选择场上存在的2张魔法·陷阱卡回到持有者手卡。
 card_type: Monster
-monster_type_line: Winged Beast / Effect
+monster_type_line: Winged Beast / Flip / Effect
 attribute: WIND
 level: 4
 atk: 1100
