--- a/data/cards/97262307.yaml
+++ b/data/cards/97262307.yaml
@@ -1,7 +1,7 @@
 konami_id: 20197
 password: 97262307
 name:
-  en: Raika no Himejanome
+  en: Ragnaraika Butterfly Lady
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    You can discard this card; Special Summon 1 Insect, Plant, or Reptile monster from your hand. If this card is banished from the hand or GY: You can activate this effect; during the End Phase of this turn, draw cards equal to the number of different Monster Types among the monsters you control that are Insect, Plant, or Reptile. You can only use each effect of "Raika no Himejanome" once per turn.
+    You can discard this card; Special Summon 1 Insect, Plant, or Reptile monster from your hand. If this card is banished from the hand or GY: You can activate this effect; during the End Phase of this turn, draw cards equal to the number of different Monster Types among the monsters you control that are Insect, Plant, or Reptile. You can only use each effect of "Ragnaraika Butterfly Lady" once per turn.
   de:
   es:
   fr:
@@ -36,7 +36,7 @@ series:
 - Ragnaraika
 images:
 - index: 1
-  image: RaikanoHimejanome-INFO-JP-R.png
+  image: RagnaraikaButterflyLady-INFO-JP-R.png
 sets:
   ja:
   - set_number: INFO-JP018
