--- a/data/cards/44072894.yaml
+++ b/data/cards/44072894.yaml
@@ -35,7 +35,7 @@ text:
   zh-CN: |-
     反转：「融合」送去自己墓地2只融合素材怪兽加入手卡。
 card_type: Monster
-monster_type_line: Warrior / Effect
+monster_type_line: Warrior / Flip / Effect
 attribute: EARTH
 level: 4
 atk: 1300
