--- a/data/cards/14087893.yaml
+++ b/data/cards/14087893.yaml
@@ -474,7 +474,7 @@ sets:
     set_name: 2-Player Starter Set
     rarities:
     - Common
-  - set_number: RA02-FR???
+  - set_number: RA02-FR050
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
