--- a/data/cards/24361622.yaml
+++ b/data/cards/24361622.yaml
@@ -97,6 +97,16 @@ sets:
     set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Ultra Rare
+  - set_number: RA02-FR39
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: DUPO-IT027
     set_name: Duel Power
