--- a/data/cards/35480699.yaml
+++ b/data/cards/35480699.yaml
@@ -152,7 +152,7 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
-  - set_number: RA02-FR???
+  - set_number: RA02-FR054
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
