--- a/data/cards/65741786.yaml
+++ b/data/cards/65741786.yaml
@@ -141,7 +141,7 @@ sets:
     rarities:
     - Secret Rare
     - Quarter Century Secret Rare
-  - set_number: RA02-FR???
+  - set_number: RA02-FR042
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
@@ -199,7 +199,7 @@ sets:
     rarities:
     - Secret Rare
     - Quarter Century Secret Rare
-  - set_number: RA02-PT???
+  - set_number: RA02-PT042
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
