--- a/data/cards/67680512.yaml
+++ b/data/cards/67680512.yaml
@@ -86,6 +86,16 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Ultra Rare
+  - set_number: RA02-FR041
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: CHIM-IT043
     set_name: Chaos Impact
