--- a/data/cards/75500286.yaml
+++ b/data/cards/75500286.yaml
@@ -235,7 +235,7 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare (Pharaoh's Rare)
-  - set_number: RA02-FR???
+  - set_number: RA02-FR052
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
