--- a/data/cards/81439173.yaml
+++ b/data/cards/81439173.yaml
@@ -340,6 +340,16 @@ sets:
     set_name: Valiant Smashers
     rarities:
     - Rare
+  - set_number: RA02-FR049
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: SDRL-IT020
     set_name: Rise of the Dragon Lords Structure Deck
