--- a/data/cards/86066372.yaml
+++ b/data/cards/86066372.yaml
@@ -122,7 +122,7 @@ sets:
     rarities:
     - Secret Rare
     - Starlight Rare
-  - set_number: RA02-FR???
+  - set_number: RA02-FR044
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
