--- a/data/cards/94886282.yaml
+++ b/data/cards/94886282.yaml
@@ -127,6 +127,16 @@ sets:
     set_name: Rise of the True Dragons Structure Deck
     rarities:
     - Common
+  - set_number: RA02-FR055
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: TDGS-IT089
     set_name: The Duelist Genesis
