--- a/data/cards/98630720.yaml
+++ b/data/cards/98630720.yaml
@@ -75,6 +75,16 @@ sets:
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ultra Rare
+  - set_number: RA02-FR043
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: GFP2-IT006
     set_name: 'Ghosts From the Past: The 2nd Haunting'
