--- a/data/cards/04280258.yaml
+++ b/data/cards/04280258.yaml
@@ -139,7 +139,7 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
-  - set_number: RA02-FR???
+  - set_number: RA02-FR040
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
