--- a/data/cards/05318639.yaml
+++ b/data/cards/05318639.yaml
@@ -679,6 +679,16 @@ sets:
     set_name: 2-Player Starter Set
     rarities:
     - Common
+  - set_number: RA02-FR048
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: SDM-I047
     set_name: Spell Ruler
