--- a/data/cards/24094653.yaml
+++ b/data/cards/24094653.yaml
@@ -483,6 +483,16 @@ sets:
     set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
+  - set_number: RA02-FR047
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: LDD-I047
     set_name: Legend of Blue Eyes White Dragon
