--- a/data/cards/67723438.yaml
+++ b/data/cards/67723438.yaml
@@ -141,7 +141,7 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
-  - set_number: RA02-FR???
+  - set_number: RA02-FR053
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
