--- a/data/cards/98045062.yaml
+++ b/data/cards/98045062.yaml
@@ -383,6 +383,16 @@ sets:
     set_name: OTS Tournament Pack 23
     rarities:
     - Ultimate Rare
+  - set_number: RA02-FR051
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: AST-IT037
     set_name: Ancient Sanctuary
